contact creation modal added

--- a/src/Header.css
+++ b/src/Header.css
@@ -8,6 +8,15 @@
   align-items: center;
 }
 
+.noBorderRad {
+  border-radius: 0 !important;
+  background: blue;
+}
+
+.noBorder {
+  border: none !important;
+}
+
 .flex {
   display: flex;
 }
