--- a/src/Card.css
+++ b/src/Card.css
@@ -1,23 +1,33 @@
 .card {
   height: 400px;
   width: 250px;
-  background: gray;
-  color: white;
+  color: #3a3a3a;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  box-shadow: 2px 2px 12px 0px rgba(50, 50, 50, 0.43);
+  text-align: left;
+  margin: 30px;
 }
 
 @media screen and (max-width: 768px) {
   .card {
-    margin: 0 auto;
+    margin: 30px auto;
   }
 }
 
 .avatar{
-  position: relative;
-  width: 100%;
-  height: 200px;
+  display: block;
+  margin: 15px auto;
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
 }
 
 .info {
   text-align: left;
-  margin-left: 10px;
+  list-style-type: none;
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: 23px;
+  padding: 0;
 }
